--- a/chess/index.html
+++ b/chess/index.html
@@ -1152,6 +1152,15 @@
 		render(board)
 		start_clock(WHITE)
 		if (white_ai_box.checked) ai_move(board, WHITE)
+
+		if ("serviceWorker" in navigator) {
+			window.addEventListener("load", function() {
+				navigator.serviceWorker
+				.register("/serviceWorker.js")
+				.then(res => console.log("service worker registered"))
+				.catch(err => console.log("service worker not registered", err))
+			})
+		}
 	</script>
 </body>
 
