--- a/chess/index.html
+++ b/chess/index.html
@@ -174,6 +174,8 @@
 	<div id="modal" onclick="if(event.target===this)this.style.visibility='hidden'"></div>
 	<script type="module">
 		"use strict"
+		onbeforeunload = () => false
+
 		const SAFARI = navigator.userAgent.indexOf('Safari') > -1
 		const WINDOWS = navigator.userAgent.indexOf('Windows') > -1
 		const COLORS = navigator.userAgent.indexOf('Chrome') > -1
@@ -890,7 +892,7 @@
 			let best_piece = null
 			let max_think = 128  // offense
 			if (depth === 1) max_think = 128  // defense
-			else if (depth > 1) max_think = 4  // trap
+			else if (depth > 1) max_think = 8  // trap
 			for (let i = 0; i < max_think; ++i) {
 				++total[0]
 				if (pieces.length < 1) break
