--- a/chess/index.html
+++ b/chess/index.html
@@ -640,7 +640,6 @@
 				return rv
 			}
 
-			
 			get_score = color => this.get_pieces(color).reduce((sum, el) => sum + el.value, 0)
 
 			is_check(color) {
@@ -950,7 +949,14 @@
 				const my_score = new_board.get_score(color)
 				const enemy_score = new_board.get_score(1 - color)
 				const score = my_score - enemy_score
-				if (score <= best_score) {
+				// if (depth === 0) console.log(piece.name, "move", xy2fr(...move), "score", score, enemy_move)
+				if (!enemy_move) {
+					// Timeout, draw, or win!
+					best_score = score - 0.5  // avoid draw
+					best_move = move
+					best_piece = piece
+					if (new_board.is_check(1 - color) && new_board.is_mate(1 - color)) break
+				} else if (score <= best_score) {
 					prune_move(piece, move)
 					pieces = pieces.filter(p => p.moves.length > 0)
 					continue
@@ -958,12 +964,6 @@
 					best_score = score
 					best_move = move
 					best_piece = piece
-				} else if (!enemy_move) {
-					// Timeout, draw, or win!
-					best_score = score - 0.5  // avoid draw
-					best_move = move
-					best_piece = piece
-					if (new_board.is_check(1 - color) && new_board.is_mate(1 - color)) break
 				}
 				const think_time = performance.now() - start_time
 				if (think_time > max_secs) {
@@ -1173,7 +1173,10 @@
 			let fen = board.fen_export()
 			console.assert(fen === "r1b4k/1pp4p/4p2p/p2p4/6QR/N7/PPP1P1P1/2K2RN1 w - - 2 17")
 			console.log(performance.now() - start)
+			black_ai_box.checked = false
+			white_ai_box.checked = false
 			await ai_move(board, WHITE)
+			clearTimeout(timer)
 			console.log(board.fen_export() === "r1b2R1k/1pp4p/4p2p/p2p4/6QR/N7/PPP1P1P1/2K3N1 b - - 3 17")
 			console.log(performance.now() - start)
 		}
