Count enemy moves. Layout. Animate mate.

--- a/chess/index.html
+++ b/chess/index.html
@@ -12,17 +12,29 @@
 </head>
 
 <body>
-	<div id="boardtext"></div>
-	<input id="guides" type="checkbox" checked><label for="guides">Show potential moves</label>
-	<input id="editmode" type="checkbox"><label for="editmode">Edit board</label><br>
-	<label for="ai_level">AI depth </label><input id="ai_level" type="number" value="2" min="1">
-	<label for="ai_time"> max secs </label><input id="ai_time" type="number" value="15" min="1">
-	<input id="black_ai_box" type="checkbox" checked><label for="black_ai_box">black</label>
-	<input id="white_ai_box" type="checkbox"><label for="white_ai_box">white</label><br>
-	<input id="speak" type="checkbox"><label for="speak">Speak</label>
-	<input id="speak_black" type="checkbox"><label for="speak_black">black moves</label>
-	<input id="speak_white" type="checkbox"><label for="speak_white">white moves</label>
-	<div id="logtext"></div>
+	<table>
+		<tr>
+			<td>
+				<div id="boardtext"></div>
+			</td>
+			<td>
+				<span id="clock1"></span> <span id="caps1" class="wf"></span>
+				<div id="logtext"></div>
+				<span id="clock0"></span> <span id="caps0" class="bf"></span>
+			</td>
+		</tr>
+	</table>
+	<div>
+		<input id="guides" type="checkbox" checked><label for="guides">Show potential moves</label>
+		<input id="editmode" type="checkbox"><label for="editmode">Edit board</label><br>
+		<label for="ai_level">AI depth </label><input id="ai_level" type="number" value="2" min="1">
+		<label for="ai_time"> max secs </label><input id="ai_time" type="number" value="15" min="1">
+		<input id="black_ai_box" type="checkbox" checked><label for="black_ai_box">black</label>
+		<input id="white_ai_box" type="checkbox"><label for="white_ai_box">white</label><br>
+		<input id="speak" type="checkbox"><label for="speak">Speak</label>
+		<input id="speak_black" type="checkbox"><label for="speak_black">black moves</label>
+		<input id="speak_white" type="checkbox"><label for="speak_white">white moves</label>
+	</div>
 	<div style="display:flex">
 		<button onclick="replay(movetextbox.value, true)" type="button">Instant</button>
 		<button onclick="replay(movetextbox.value)" type="button">Replay</button>
