Some coverage stats.

--- a/chess/index.html
+++ b/chess/index.html
@@ -25,7 +25,8 @@
 		</tr>
 	</table>
 	<div>
-		<input id="guides" type="checkbox" checked><label for="guides">Show potential moves</label>
+		Show <input id="guides" type="checkbox" checked><label for="guides">potential moves</label>
+		<input id="stats" type="checkbox" checked><label for="stats">stats</label>
 		<input id="editmode" type="checkbox"><label for="editmode">Edit board</label><br>
 		<label for="ai_level">AI depth </label><input id="ai_level" type="number" value="2" min="1">
 		<label for="ai_time"> max secs </label><input id="ai_time" type="number" value="15" min="1">
