Found tune that was stuck in my head.

--- a/synth.html
+++ b/synth.html
@@ -192,7 +192,7 @@
         const entry = [parseInt(performance.now()), down, synth_key, event.key]
         //console.log(entry)
         if (synth_key >= 0) log.push(entry)
-        /* Where's this from? https://youtu.be/SoBMhx_ap_g?t=267 + La Cucaracha + random game menu theme?
+        /* Where's this from? https://youtu.be/SoBMhx_ap_g?t=267 + La Cucaracha + random game menu theme? Them's Fightin' Herds!
         '[[5375,1,1,"x"],[5464,0,1,"x"],[5524,1,1,"x"],[5625,0,1,"x"],[5661,1,1,"x"],[5793,0,1,"x"],[5804,1,2,"c"],[5947,0,2,"c"],[6097,1,3,"v"],[6238,0,3,"v"],[6391,1,1,"x"],[6486,0,1,"x"],[6559,1,1,"x"],[6637,0,1,"x"],[6681,1,1,"x"],[6790,0,1,"x"],[6830,1,1,"x"],[6930,0,1,"x"],[6971,1,2,"c"],[7082,0,2,"c"]]'
         */
       }
