--- a/synth.html
+++ b/synth.html
@@ -123,6 +123,10 @@
 			vertical-align: middle;
 		}
 
+		.morse {
+			margin-top: 2em;
+		}
+
 		.right {
 			width: 50%;
 			position: absolute;
@@ -174,13 +178,168 @@
 	</div>
 
 	<div class="left">
-		<button onclick="log = []; let id = setTimeout(() => {}, 0); while (id--) window.clearTimeout(id)">Clear</button>
+		<button
+			onclick="log = []; let id = setTimeout(() => {}, 0); while (id--) window.clearTimeout(id)">Clear</button>
 		<button onclick="replay()">Replay</button>
 		<button onclick="const rec = JSON.stringify(log); console.log(rec); alert(rec)">Export</button>
 		<button onclick="log = JSON.parse(prompt())">Import</button>
 	</div>
 
+	<div class="morse">
+		<textarea id="morsetext" placeholder="Morse text">S O S</textarea>
+		<button onclick="morsecode.value = morse_to(morsetext.value)">To</button>
+		<button onclick="morsetext.value = morse_from(morsecode.value)">From</button>
+		<button onclick="morse_play(morsecode.value)">Play</button>
+		<textarea id="morsecode" placeholder="Morse code">... --- ...</textarea>
+	</div>
+
 	<script>
+		// Morse uses 600-800 Hz: https://www.johndcook.com/blog/2022/02/25/morse-code-in-musical-notation/
+		// https://www.codebug.org.uk/learn/step/541/morse-code-timing-rules/
+		// DOT between signals, DA(S)H between letters, SPACE between words.
+		const DOT = 50
+		const DASH = 3 * DOT
+		const SPACE = 7 * DOT
+		// https://morsecode.world/international/morse2.html
+		const MORSE = {
+			' ': ' / ',
+			'A': ' .-',
+			'B': '-...',
+			'C': '-.-.',
+			'D': '-..',
+			'E': '.',
+			'F': '..-.',
+			'G': '--.',
+			'H': '....',
+			'I': '..',
+			'J': '.---',
+			'K': '-.-',
+			'L': '.-..',
+			'M': '--',
+			'N': '-.',
+			'O': '---',
+			'P': '.--.',
+			'Q': '--.-',
+			'R': '.-.',
+			'S': '...',
+			'T': '-',
+			'U': '..-',
+			'V': '...-',
+			'W': '.--',
+			'X': '-..-',
+			'Y': '-.--',
+			'Z': '--..',
+			'0': '-----',
+			'1': '.----',
+			'2': '..---',
+			'3': '...--',
+			'4': '....-',
+			'5': '.....',
+			'6': '-....',
+			'7': '--...',
+			'8': '---..',
+			'9': '----.',
+			'&': '.-...',
+			"'": '.----.',
+			'@': '.--.-.',
+			')': '-.--.-',
+			'(': '-.--.',
+			':': '---...',
+			',': '--..--',
+			'=': '-...-',
+			'!': '-.-.--,',
+			'.': '.-.-.-',
+			'-': '-....-',
+			'×': '-..-',
+			'%': '----- -..-. -----',
+			'+': '.-.-.',
+			'"': '.-..-.',
+			'?': '..--..',
+			'/': '-..-.',
+			'À': '.--.-',
+			'Å': '.--.-',
+			'Ä': '.-.-',
+			'Ą': '.-.-',
+			'Æ': '.-.-',
+			'Ć': '-.-..',
+			'Ĉ': '-.-..',
+			'Ç': '-.-..',
+			'Ch': '----',
+			'Ĥ': '----',
+			'Š': '----',
+			'Đ': '..-..',
+			'É': '..-..',
+			'Ę': '..-..',
+			'Ð': '..--.',
+			'È': '.-..-',
+			'Ł': '.-..-',
+			'Ĝ': '--.-.',
+			'Ĵ': '.---.',
+			'Ń': '--.--',
+			'Ñ': '--.--',
+			'Ó': '---.',
+			'Ö': '---.',
+			'Ø': '---.',
+			'Ś': '...-...',
+			'Ŝ': '...-.',
+			'Þ': '.--..',
+			'Ü': '..--',
+			'Ŭ': '..--',
+			'Ź': '--..-.',
+			'Ż': '--..-',
+			'\n': '.-.-',
+			'EOF': '.-.-.',
+			'ERROR': '........',
+		}
+		let MORSE_CHAR = {}
+		for (let key in MORSE) {
+			MORSE_CHAR[MORSE[key]] = key
+		}
+
+		function morse_to(text) {
+			let code = []
+			for (let char of text.toUpperCase()) {
+				code.push(MORSE[char] || MORSE['ERROR'])
+			}
+			return code.join(' ')
+		}
+
+		function morse_from(code) {
+			let text = []
+			for (let key of code.split(' ')) {
+				if (key === '') continue
+				if (key === '/') key = ' / '
+				text.push(MORSE_CHAR[key] || ' ')
+			}
+			return text.join('')
+		}
+
+		function morse_play(code) {
+			log = []
+			let time = 0
+			// [[10879,1,38,"5"],[10947,0,38,"5"],[11009,1,38,"5"],[11194,0,38,"5"],[11860,1,38,"5"],[11941,0,38,"5"],[12042,1,38,"5"],[12124,0,38,"5"],[12204,1,38,"5"],[12291,0,38,"5"],[12582,1,38,"5"],[12664,0,38,"5"],[12768,1,38,"5"],[12792,0,38,"5"],[12821,1,38,"5"],[12918,0,38,"5"]]
+			for (let char of code) {
+				log.push([time, 1, 38, "5"])
+				if (char === '.') time += DOT
+				else if (char === '-') time += DASH
+				else if (char === ' ') {
+					log.pop()
+					time += DASH
+					continue
+				}
+				else if (char === '/') {
+					log.pop()
+					time += SPACE - 2 * DASH
+					continue
+				}
+				log.push([time, 0, 38, "5"])
+				time += DOT
+			}
+			replay()
+		}
+		morsetext.addEventListener('keydown', () => event.stopPropagation())
+		morsetext.addEventListener('keyup', () => event.stopPropagation())
+
 		let audioContext
 		let synth_keys
 		let log = []
@@ -402,13 +561,6 @@
 			keyElement.addEventListener("mouseup", noteReleased, false);
 			keyElement.addEventListener("mouseover", notePressed, false);
 			keyElement.addEventListener("mouseleave", noteReleased, false);
-
-			keyElement.addEventListener("keydown", (event) => {
-				if (event.isComposing || event.keyCode === 229) {
-					return
-				}
-				console.log(event)
-			});
 
 			return keyElement;
 		}
