Work more than once.

--- a/chess/index.html
+++ b/chess/index.html
@@ -12,8 +12,10 @@
 </head>
 
 <body>
+	<script src="drop.js"></script>
 	<div id="dropzone" class="modal">DROP HERE</div>
 	<table>
+		<caption>A chess board.</caption>
 		<tr>
 			<td>
 				<div id="boardtext"></div>
